@@ -22,7 +22,7 @@ extern void jordan_totient(mpz_t tot, const mpz_t n, unsigned long k);
 extern void carmichael_lambda(mpz_t lambda, const mpz_t n);
 extern void znorder(mpz_t res, const mpz_t a, const mpz_t n);
 extern void znprimroot(mpz_t root, const mpz_t n);
-extern void ramanujan_tau(mpz_t res, const mpz_t n);
+/* extern void ramanujan_tau(mpz_t res, const mpz_t n); */
 
 extern UV   _GMP_trial_factor(const mpz_t n, UV from_n, UV to_n);
 extern int  _GMP_prho_factor(const mpz_t n, mpz_t f, UV a, UV rounds);
